--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "5fea7347-2cbc-4c08-8fe5-154ac4cf71ed"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
